# wasmedge-lfx-pretest-jit

pretest1/: pretest1.cpp  result.md
pretest2/: CMakeLists.txt  input.ll  list_functions.cpp
